demenchuk/examples/errors/lexer/02_unclosed_string.riv
# LEXER ERROR: Незакрытая строка
# Ожидаемая ошибка: Unclosed string literal at line 4

name = "Alice"
# Отсутствует закрывающая кавычка
message = "Hello world
write(message)
